style avoid horizontal scroll on errors
Former-commit-id: 8fcdbb42d9458ae31747493a3ab52dfca929fdc3

--- a/src/frontend/static/style.css
+++ b/src/frontend/static/style.css
@@ -44,5 +44,6 @@ pre {
   padding: 10px;
   overflow: auto;
   white-space: pre-wrap;
+  box-sizing: border-box;
   width: 100%;
 }
